fix mobile view(flex gap not working)

--- a/assets/styles/_works.scss
+++ b/assets/styles/_works.scss
@@ -4,7 +4,7 @@
   background-color: black;
   display: flex;
   padding: 4rem 5%;
-  gap: 1rem;
+  // gap: 1rem;
 
   .works-content {
     flex: 1;
@@ -35,6 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 1rem;
     img {
       height: 100%;
       width: 100%;
