--- a/assets/styles/mobile/_hero.scss
+++ b/assets/styles/mobile/_hero.scss
@@ -58,7 +58,7 @@
       }
       .cta-container {
         display: flex;
-        gap: 1rem;
+        // gap: 1rem;
         margin-top: 3rem;
         flex-direction: column;
         padding: 0 5rem;
