--- a/assets/styles/mobile/_skills.scss
+++ b/assets/styles/mobile/_skills.scss
@@ -8,16 +8,17 @@
     height: 100%;
     width: 100%;
     position: static;
-    padding: 1rem;
+    padding: 2rem 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 1rem;
+    // padding: 0.5rem 0;
+    // gap: 1rem;
+    // background-color: red;
     transform: translateX(0);
     .card {
-      height: 100%;
-      width: 100%;
+      flex: 1;
       background-color: white;
       border-radius: 20px;
       display: flex;
