--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -201,7 +201,6 @@ body {
   display: -ms-flexbox;
   display: flex;
   padding: 4rem 5%;
-  gap: 1rem;
 }
 
 .works .works-content {
@@ -256,6 +255,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: 1rem;
 }
 
 .works .works-image img {
@@ -393,7 +393,6 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 1rem;
     margin-top: 3rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -424,7 +423,7 @@ body {
     height: 100%;
     width: 100%;
     position: static;
-    padding: 1rem;
+    padding: 2rem 1rem;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -438,13 +437,13 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 1rem;
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
   .skills .card-container .card {
-    height: 100%;
-    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     background-color: white;
     border-radius: 20px;
     display: -webkit-box;
